data/derived/comb/progs/unify/prog4268.ml.out
Characters 372-388:
  |4->buildCosine(build(rand),nd);;
                 ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
